--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,11 @@
 {
   "item.tutorialmod.citrine": "Citrine",
-  "item.tutorialmod.raw_citrine": "Raw Citrine"
+  "item.tutorialmod.raw_citrine": "Raw Citrine",
+
+  "block.tutorialmod.citrine_block": "Citrine Block",
+  "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
+  "block.tutorialmod.citrine_ore": "Citrine Ore",
+  "block.tutorialmod.deepslate_citrine_ore": "Deepslate Citrine Ore",
+  "block.tutorialmod.netherrack_citrine_ore": "Netherrack Citrine Ore",
+  "block.tutorialmod.endstone_citrine_ore": "Endstone Citrine Ore"
 }
