--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.tutorialmod.citrine": "Citrine",
   "item.tutorialmod.raw_citrine": "Raw Citrine",
+  "item.tutorialmod.dowsing_rod": "Dowsing Rod",
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
@@ -9,5 +10,7 @@
   "block.tutorialmod.netherrack_citrine_ore": "Netherrack Citrine Ore",
   "block.tutorialmod.endstone_citrine_ore": "Endstone Citrine Ore",
 
-  "itemGroup.tutorialtab": "Tutorial Mod"
+  "itemGroup.tutorialtab": "Tutorial Mod",
+
+  "item.tutorialmod.dowsing_rod.no_valuables": "No Valuables Found!"
 }
