--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -9,6 +9,7 @@
   "block.tutorialmod.deepslate_citrine_ore": "Deepslate Citrine Ore",
   "block.tutorialmod.netherrack_citrine_ore": "Netherrack Citrine Ore",
   "block.tutorialmod.endstone_citrine_ore": "Endstone Citrine Ore",
+  "block.tutorialmod.speedy_block": "Speedy Block",
 
   "itemGroup.tutorialtab": "Tutorial Mod",
 
