--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,9 @@
   "item.tutorialmod.citrine": "Citrine",
   "item.tutorialmod.raw_citrine": "Raw Citrine",
   "item.tutorialmod.dowsing_rod": "Dowsing Rod",
+  "item.tutorialmod.cucumber": "Cucumber",
+
+
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
