--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.tutorialmod.raw_citrine": "Raw Citrine",
   "item.tutorialmod.dowsing_rod": "Dowsing Rod",
   "item.tutorialmod.cucumber": "Cucumber",
+  "item.tutorialmod.coal_coke": "Coal Coke",
 
 
 
