Fences, Gates, Walls, Stairs and Slabs

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,6 +15,12 @@
   "block.tutorialmod.endstone_citrine_ore": "Endstone Citrine Ore",
   "block.tutorialmod.speedy_block": "Speedy Block",
 
+  "block.tutorialmod.citrine_slab": "Citrine Slab",
+  "block.tutorialmod.citrine_stairs": "Citrine Stairs",
+  "block.tutorialmod.citrine_fence": "Citrine Fence",
+  "block.tutorialmod.citrine_wall": "Citrine Wall",
+  "block.tutorialmod.citrine_fence_gate": "Citrine Fence Gate",
+
   "itemGroup.tutorialtab": "Tutorial Mod",
 
   "item.tutorialmod.dowsing_rod.no_valuables": "No Valuables Found!",
