--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -5,6 +5,11 @@
   "item.tutorialmod.cucumber": "Cucumber",
   "item.tutorialmod.coal_coke": "Coal Coke",
 
+  "item.tutorialmod.citrine_pickaxe": "Citrine Pickaxe",
+  "item.tutorialmod.citrine_axe": "Citrine Axe",
+  "item.tutorialmod.citrine_shovel": "Citrine Shovel",
+  "item.tutorialmod.citrine_hoe": "Citrine Hoe",
+  "item.tutorialmod.citrine_sword": "Citrine Sword",
 
 
   "block.tutorialmod.citrine_block": "Citrine Block",
