--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -11,6 +11,10 @@
   "item.tutorialmod.citrine_hoe": "Citrine Hoe",
   "item.tutorialmod.citrine_sword": "Citrine Sword",
 
+  "item.tutorialmod.citrine_helmet": "Citrine Helmet",
+  "item.tutorialmod.citrine_chestplate": "Citrine Chestplate",
+  "item.tutorialmod.citrine_leggings": "Citrine Leggings",
+  "item.tutorialmod.citrine_boots": "Citrine Boots",
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
