--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -16,6 +16,8 @@
   "item.tutorialmod.citrine_leggings": "Citrine Leggings",
   "item.tutorialmod.citrine_boots": "Citrine Boots",
 
+  "item.tutorialmod.magic_dust": "Magic Dust",
+
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
   "block.tutorialmod.citrine_ore": "Citrine Ore",
