--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -40,6 +40,8 @@
   "block.tutorialmod.pink_rose": "Pink Rose",
   "block.tutorialmod.potted_pink_rose": "Potted Pink Rose",
 
+  "block.tutorialmod.winter_window": "Winter Window",
+
   "itemGroup.tutorialtab": "Tutorial Mod",
 
   "item.tutorialmod.dowsing_rod.no_valuables": "No Valuables Found!",
