--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -41,6 +41,7 @@
   "block.tutorialmod.potted_pink_rose": "Potted Pink Rose",
 
   "block.tutorialmod.winter_window": "Winter Window",
+  "block.tutorialmod.citrine_lamp": "Citrine Lamp",
 
   "itemGroup.tutorialtab": "Tutorial Mod",
 
