--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.tutorialmod.citrine_boots": "Citrine Boots",
 
   "item.tutorialmod.magic_dust": "Magic Dust",
+  "item.tutorialmod.data_tablet": "Data Tablet",
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
