--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -18,6 +18,7 @@
 
   "item.tutorialmod.magic_dust": "Magic Dust",
   "item.tutorialmod.data_tablet": "Data Tablet",
+  "item.tutorialmod.kaupenbow": "Kaupenbow",
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
