--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -54,5 +54,7 @@
   "item.tutorialmod.dowsing_rod.no_valuables": "No Valuables Found!",
   "tooltip.tutorialmod.dowsing_rod.tooltip.shift": "Right Click to find Valuables!",
   "tooltip.tutorialmod.dowsing_rod.tooltip": "Press §eSHIFT§r for more Information!",
-  "tooltip.tutorialmod.block.speedy_block": "I am speed!"
+  "tooltip.tutorialmod.block.speedy_block": "I am speed!",
+
+  "sounds.tutorialmod.dowsing_rod_found_ore": "Dowsing Rod Found Item Sound"
 }
