tree and tree gen

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -58,6 +58,8 @@
   "block.tutorialmod.ebony_wood": "Ebony Wood",
   "block.tutorialmod.stripped_ebony_log": "Stripped Ebony Log",
   "block.tutorialmod.stripped_ebony_wood": "Stripped Ebony Wood",
+  "block.tutorialmod.ebony_leaves": "Ebony Leaves",
+  "block.tutorialmod.ebony_sapling": "Ebony Sapling",
 
   "itemGroup.tutorialtab": "Tutorial Mod",
 
