--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.tutorialmod.kaupenbow": "Kaupenbow",
 
   "item.tutorialmod.cucumber_seeds": "Cucumber Seeds",
+  "item.tutorialmod.citrine_staff": "Citrine Staff",
 
   "item.tutorialmod.bar_brawl_music_disc": "Bar Brawl Music Disc",
   "item.tutorialmod.bar_brawl_music_disc.desc": "Bryan Tech - Bar Brawl (CC0)",
