--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -69,5 +69,6 @@
   "tooltip.tutorialmod.dowsing_rod.tooltip": "Press §eSHIFT§r for more Information!",
   "tooltip.tutorialmod.block.speedy_block": "I am speed!",
 
-  "sounds.tutorialmod.dowsing_rod_found_ore": "Dowsing Rod Found Item Sound"
+  "sounds.tutorialmod.dowsing_rod_found_ore": "Dowsing Rod Found Item Sound",
+  "effect.tutorialmod.freeze": "Freeze"
 }
