--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -65,6 +65,8 @@
   "block.tutorialmod.ebony_leaves": "Ebony Leaves",
   "block.tutorialmod.ebony_sapling": "Ebony Sapling",
 
+  "block.tutorialmod.gem_cutting_station": "Gem Cutting Station",
+
   "itemGroup.tutorialtab": "Tutorial Mod",
 
   "item.tutorialmod.dowsing_rod.no_valuables": "No Valuables Found!",
