--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -68,6 +68,7 @@
   "block.tutorialmod.ebony_sapling": "Ebony Sapling",
 
   "block.tutorialmod.gem_cutting_station": "Gem Cutting Station",
+  "block.tutorialmod.ebony_sign": "Ebony Sign",
 
   "itemGroup.tutorialtab": "Tutorial Mod",
 
