--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -31,6 +31,7 @@
   "item.minecraft.lingering_potion.effect.freeze_potion": "Lingering Potion of Freeze",
 
   "item.tutorialmod.gem_cutter_tool": "Gem Cutter Tool",
+  "item.tutorialmod.honey_bucket": "Honey Bucket",
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
