--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -33,6 +33,8 @@
   "item.tutorialmod.gem_cutter_tool": "Gem Cutter Tool",
   "item.tutorialmod.honey_bucket": "Honey Bucket",
 
+  "item.tutorialmod.raccoon_spawn_egg": "Raccoon Spawn Egg",
+
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
   "block.tutorialmod.citrine_ore": "Citrine Ore",
