--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -34,6 +34,8 @@
   "item.tutorialmod.honey_bucket": "Honey Bucket",
 
   "item.tutorialmod.raccoon_spawn_egg": "Raccoon Spawn Egg",
+  "item.tutorialmod.animated_item": "Animated Item",
+
 
   "block.tutorialmod.citrine_block": "Citrine Block",
   "block.tutorialmod.raw_citrine_block": "Raw Citrine Block",
